# agent-smith

./: .gitignore  README.md  keep_awake.py  main.py  prepare.py  program.md  pyproject.toml  results.tsv  results_summary.md  train.py  train_earth.R
.agents/skills/agent-smith/: README.md  SKILL.md
.agents/skills/agent-smith/agents/: openai.yaml
.agents/skills/agent-smith/assets/: feature-importances-template.py  prepare-template.py  program-template.md  pyproject-template.toml  train-template-generic.py  train-template-tabular.py
.agents/skills/agent-smith/references/: defaults-and-scaffolding.md
.agents/skills/agent-smith/scripts/: summarize_results.py
.agents/skills/alphaxiv-paper-lookup/: SKILL.md
.agents/skills/google-earth-crop/: .gitignore  README.md  SKILL.md  package-lock.json  package.json
.agents/skills/google-earth-crop/benchmarks/: baseline-2026-06-10.json  us-10-coordinate-benchmark.md
.agents/skills/google-earth-crop/evals/: evals.json
.agents/skills/google-earth-crop/references/: csv-batch-template.md
.agents/skills/google-earth-crop/scripts/: benchmark_google_earth_crop.mjs  crop_csv_batch.mjs  crop_google_earth.mjs  crop_historical_burst.mjs  crop_permits_batch.mjs  google_earth_crop_core.mjs  ocr_date_label.mjs
.agents/skills/r-docker/: SKILL.md
.agents/skills/r-docker/assets/: r-task-template.md  r-template-earth.R  r-template-generic.R  r-template-ggplot2.R  r-template-glm.R  r-template-prepare.R  r-template-tabular-classification.R
.agents/skills/r-docker/references/: docker-execution.md  (+1 more)
scripts/: r_worker.sh  run_r.sh
(+10 files in other folders)
